--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,4 @@
-name: Generated APK AAB (Upload - Create Artifact To Github Action)
-
+name: Build Automation
 env:
   # The name of the main module repository
   main_project_module: app
