--- a/.github/workflows/conditional_workflow.yml
+++ b/.github/workflows/conditional_workflow.yml
@@ -16,10 +16,8 @@ on:
           - build
           - build and deploy
 jobs:
-  build_upload:
-    
+  build:
     runs-on: ubuntu-latest
-    
     steps:
       - uses: actions/checkout@v3
 
@@ -66,12 +64,12 @@ jobs:
 
       # Upload Artifact Build
       # Noted For Output [main_project_module]/build/outputs/apk/debug/
-      - name: Upload APK Debug - ${{ env.repository_name }}
-        if: ${{ github.event.inputs.choice == 'build and deploy' }}
-        uses: actions/upload-artifact@v3
-        with:
-          name: ${{ env.date_today }} - ${{ env.playstore_name }} - ${{ env.repository_name }} - APK(s) debug generated
-          path: ${{ env.main_project_module }}/build/outputs/apk/debug/
+      # - name: Upload APK Debug - ${{ env.repository_name }}
+      #   if: ${{ github.event.inputs.choice == 'build and deploy' }}
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     name: ${{ env.date_today }} - ${{ env.playstore_name }} - ${{ env.repository_name }} - APK(s) debug generated
+      #     path: ${{ env.main_project_module }}/build/outputs/apk/debug/
 
       # Noted For Output [main_project_module]/build/outputs/apk/release/
       # - name: Upload APK Release - ${{ env.repository_name }}
@@ -86,3 +84,13 @@ jobs:
       #   with:
       #     name: ${{ env.date_today }} - ${{ env.playstore_name }} - ${{ env.repository_name }} - App bundle(s) AAB release generated
       #     path: ${{ env.main_project_module }}/build/outputs/bundle/release/
+  upload_artifact:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Upload APK Debug
+        if: ${{ github.event.inputs.choice == 'build and deploy' }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: ${{ env.playstore_name }} -  - APK(s) debug generated
+          path: ${{ env.main_project_module }}/build/outputs/apk/debug/
