--- a/.github/workflows/conditional_workflow.yml
+++ b/.github/workflows/conditional_workflow.yml
@@ -1,4 +1,4 @@
-name: Build Automation
+name: Build & deploy on condition
 env:
   # The name of the main module repository
   main_project_module: app
