--- a/.github/workflows/conditional_workflow.yml
+++ b/.github/workflows/conditional_workflow.yml
@@ -1,4 +1,5 @@
 name: Build & deploy on condition
+run-name: ${{ github.actor }} is learning GitHub Actions
 env:
   # The name of the main module repository
   main_project_module: app
