Update conditional_workflow.yml  (test Fail)

--- a/.github/workflows/conditional_workflow.yml
+++ b/.github/workflows/conditional_workflow.yml
@@ -47,7 +47,7 @@ jobs:
       # Run Build Project
       - name: Build gradle project
         if: ${{ github.event.inputs.choice == 'build' }}
-        run: ./gradlew build
+        run: ./gradlew build_do_fail
 
       # Create APK Debug
       - name: Build apk debug project (APK) - ${{ env.main_project_module }} module
